# -*- coding: utf-8 -*-
"""
åŠå…¬æ¡Œé£æ°´ä¸»åˆ†æå™¨
æ•´åˆç‰©å“æ£€æµ‹ã€æ–¹ä½è®¡ç®—ã€è§„åˆ™åŒ¹é…ã€å…«å­—èåˆ
æ”¯æŒå¼‚æ­¥å¤„ç†ä»¥æå‡å¹¶å‘æ€§èƒ½
"""

import logging
import time
import asyncio
from concurrent.futures import ThreadPoolExecutor
from typing import Dict, Optional

from item_detector import DeskItemDetector
from position_calculator import PositionCalculator
from rule_engine import DeskFengshuiEngine
from bazi_client import BaziClient

logger = logging.getLogger(__name__)

# å…¨å±€çº¿ç¨‹æ± ï¼ˆä¼˜åŒ–ï¼šå¢åŠ çº¿ç¨‹æ•°ï¼Œæ·»åŠ åç§°å‰ç¼€ï¼‰
_executor = ThreadPoolExecutor(max_workers=6, thread_name_prefix="desk_fengshui")

# è¶…æ—¶é…ç½®
BAZI_TIMEOUT = 8  # å…«å­—æœåŠ¡è¶…æ—¶ï¼ˆç§’ï¼‰
DETECTION_TIMEOUT = 30  # æ£€æµ‹è¶…æ—¶ï¼ˆç§’ï¼‰
RULE_TIMEOUT = 10  # è§„åˆ™åŒ¹é…è¶…æ—¶ï¼ˆç§’ï¼‰


class DeskFengshuiAnalyzer:
    """åŠå…¬æ¡Œé£æ°´åˆ†æå™¨"""
    
    def __init__(self):
        """åˆå§‹åŒ–åˆ†æå™¨"""
        self.detector = DeskItemDetector()
        self.engine = DeskFengshuiEngine()
        self.bazi_client = BaziClient()
        
        logger.info("âœ… åŠå…¬æ¡Œé£æ°´åˆ†æå™¨åˆå§‹åŒ–æˆåŠŸ")
    
    async def analyze_async(self, image_bytes: bytes, solar_date: Optional[str] = None,
                            solar_time: Optional[str] = None, gender: Optional[str] = None,
                            use_bazi: bool = True) -> Dict:
        """
        å¼‚æ­¥åˆ†æåŠå…¬æ¡Œé£æ°´ï¼ˆæ¨èä½¿ç”¨ï¼Œæ”¯æŒå¹¶å‘ï¼‰
        
        Args:
            image_bytes: åŠå…¬æ¡Œç…§ç‰‡
            solar_date: ç”¨æˆ·å‡ºç”Ÿæ—¥æœŸï¼ˆå¯é€‰ï¼‰
            solar_time: ç”¨æˆ·å‡ºç”Ÿæ—¶é—´ï¼ˆå¯é€‰ï¼‰
            gender: æ€§åˆ«ï¼ˆå¯é€‰ï¼‰
            use_bazi: æ˜¯å¦ä½¿ç”¨å…«å­—åˆ†æ
        
        Returns:
            åˆ†æç»“æœ
        """
        total_start = time.time()
        stages_time = {}
        
        try:
            # 1. å¼‚æ­¥æ£€æµ‹ç‰©å“ï¼ˆCPUå¯†é›†å‹ï¼Œåœ¨çº¿ç¨‹æ± ä¸­æ‰§è¡Œï¼Œå¸¦è¶…æ—¶ï¼‰
            logger.info("å¼€å§‹ç‰©å“æ£€æµ‹ï¼ˆå¼‚æ­¥ï¼‰...")
            stage_start = time.time()
            try:
                detection_result = await asyncio.wait_for(
                    asyncio.get_event_loop().run_in_executor(
                        _executor,
                        self.detector.detect,
                        image_bytes
                    ),
                    timeout=DETECTION_TIMEOUT
                )
            except asyncio.TimeoutError:
                elapsed = time.time() - stage_start
                logger.error(f"âŒ ç‰©å“æ£€æµ‹è¶…æ—¶ï¼ˆ>{DETECTION_TIMEOUT}ç§’ï¼Œå·²è€—æ—¶: {elapsed:.2f}ç§’ï¼‰")
                return {
                    'success': False,
                    'error': f'ç‰©å“æ£€æµ‹è¶…æ—¶ï¼ˆè¶…è¿‡{DETECTION_TIMEOUT}ç§’ï¼‰ï¼Œè¯·å°è¯•ä¸Šä¼ æ›´å°çš„å›¾ç‰‡'
                }
            
            stages_time['detection'] = time.time() - stage_start
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ detection_result ä¸ä¸º None
            if detection_result is None:
                logger.error("ç‰©å“æ£€æµ‹è¿”å› None")
                return {
                    'success': False,
                    'error': 'ç‰©å“æ£€æµ‹æœåŠ¡è¿”å›ç©ºç»“æœï¼Œè¯·ç¨åé‡è¯•'
                }
            
            if not detection_result.get('success'):
                return {
                    'success': False,
                    'error': detection_result.get('error', 'ç‰©å“æ£€æµ‹å¤±è´¥')
                }
            
            items = detection_result.get('items', [])
            img_shape = detection_result.get('image_shape')
            
            logger.info(f"æ£€æµ‹åˆ° {len(items)} ä¸ªç‰©å“ï¼ˆè€—æ—¶: {stages_time['detection']:.2f}ç§’ï¼‰")
            
            # 2. è®¡ç®—ä½ç½®ï¼ˆè½»é‡çº§ï¼ŒåŒæ­¥æ‰§è¡Œï¼‰
            logger.info("è®¡ç®—ç‰©å“ä½ç½®...")
            stage_start = time.time()
            enriched_items = PositionCalculator.calculate_all_positions(items, img_shape)
            stages_time['position'] = time.time() - stage_start
            
            # 3. å¹¶è¡Œè·å–å…«å­—ä¿¡æ¯å’ŒåŠ è½½è§„åˆ™
            logger.info("å¹¶è¡Œè·å–å…«å­—ä¿¡æ¯å’Œè§„åˆ™...")
            bazi_info = None
            loop = asyncio.get_event_loop()
            stage_start = time.time()
            
            # åˆ›å»ºå…«å­—è·å–Futureï¼ˆå¦‚æœéœ€è¦ï¼‰
            bazi_future = None
            if use_bazi and solar_date and solar_time and gender:
                bazi_future = loop.run_in_executor(
                    _executor,
                    self.bazi_client.get_xishen_jishen,
                    solar_date, solar_time, gender
                )
            
            # åˆ›å»ºè§„åˆ™åŠ è½½Futureï¼ˆåœ¨åå°é¢„åŠ è½½ï¼‰
            rules_future = loop.run_in_executor(
                _executor,
                self.engine.load_rules,
                False  # force_reload
            )
            
            # ç­‰å¾…å…«å­—ä¿¡æ¯ï¼ˆå¦‚æœå¯ç”¨ï¼Œå¸¦è¶…æ—¶ï¼‰
            if bazi_future:
                try:
                    bazi_result = await asyncio.wait_for(bazi_future, timeout=BAZI_TIMEOUT)
                    # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ bazi_result ä¸ä¸º None
                    if bazi_result is not None and bazi_result.get('success'):
                        bazi_info = bazi_result
                        stages_time['bazi'] = time.time() - stage_start
                        logger.info(f"âœ… è·å–å…«å­—ä¿¡æ¯æˆåŠŸï¼ˆè€—æ—¶: {stages_time['bazi']:.2f}ç§’ï¼‰: å–œç¥={bazi_info.get('xishen')}, å¿Œç¥={bazi_info.get('jishen')}")
                    else:
                        error_msg = bazi_result.get('error', 'æœªçŸ¥é”™è¯¯') if bazi_result else 'è¿”å›ç©ºç»“æœ'
                        logger.warning(f"è·å–å…«å­—ä¿¡æ¯å¤±è´¥: {error_msg}ï¼Œå°†ä¸ä½¿ç”¨å…«å­—åˆ†æ")
                        stages_time['bazi'] = time.time() - stage_start
                except asyncio.TimeoutError:
                    logger.warning(f"âš ï¸ è·å–å…«å­—ä¿¡æ¯è¶…æ—¶ï¼ˆ>{BAZI_TIMEOUT}ç§’ï¼‰ï¼Œå°†ä¸ä½¿ç”¨å…«å­—åˆ†æ")
                    stages_time['bazi'] = BAZI_TIMEOUT
                except Exception as e:
                    error_msg = str(e)
                    # æ£€æŸ¥æ˜¯å¦æ˜¯ gRPC ç›¸å…³é”™è¯¯
                    if 'aborted' in error_msg.lower() or 'signal' in error_msg.lower():
                        logger.warning(f"âš ï¸ å…«å­—æœåŠ¡è¿æ¥ä¸­æ–­: {error_msg}ï¼Œå°†ä¸ä½¿ç”¨å…«å­—åˆ†æ")
                    else:
                        logger.warning(f"è·å–å…«å­—ä¿¡æ¯å¼‚å¸¸: {e}ï¼Œå°†ä¸ä½¿ç”¨å…«å­—åˆ†æ")
                    stages_time['bazi'] = time.time() - stage_start
            
            # ç­‰å¾…è§„åˆ™åŠ è½½å®Œæˆ
            await rules_future
            
            # 4. åŒ¹é…è§„åˆ™ï¼ˆCPUå¯†é›†å‹ï¼Œåœ¨çº¿ç¨‹æ± ä¸­æ‰§è¡Œï¼Œå¸¦è¶…æ—¶ï¼‰
            logger.info("åŒ¹é…é£æ°´è§„åˆ™ï¼ˆå¼‚æ­¥ï¼‰...")
            stage_start = time.time()
            try:
                rule_result = await asyncio.wait_for(
                    loop.run_in_executor(
                        _executor,
                        self.engine.match_rules,
                        enriched_items,
                        bazi_info
                    ),
                    timeout=RULE_TIMEOUT
                )
            except asyncio.TimeoutError:
                elapsed = time.time() - stage_start
                logger.error(f"âŒ è§„åˆ™åŒ¹é…è¶…æ—¶ï¼ˆ>{RULE_TIMEOUT}ç§’ï¼Œå·²è€—æ—¶: {elapsed:.2f}ç§’ï¼‰")
                return {
                    'success': False,
                    'error': f'è§„åˆ™åŒ¹é…è¶…æ—¶ï¼ˆè¶…è¿‡{RULE_TIMEOUT}ç§’ï¼‰'
                }
            
            stages_time['rules'] = time.time() - stage_start
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ rule_result ä¸ä¸º None
            if rule_result is None:
                logger.error("è§„åˆ™åŒ¹é…è¿”å› None")
                return {
                    'success': False,
                    'error': 'è§„åˆ™åŒ¹é…æœåŠ¡è¿”å›ç©ºç»“æœ'
                }
            
            if not rule_result.get('success'):
                return {
                    'success': False,
                    'error': rule_result.get('error', 'è§„åˆ™åŒ¹é…å¤±è´¥')
                }
            
            # 4.1 ä¸ºæ¯ä¸ªç‰©å“ç”Ÿæˆè¯¦ç»†åˆ†æï¼ˆæ ¸å¿ƒæ–°åŠŸèƒ½ï¼Œå¸¦è¶…æ—¶ï¼‰
            logger.info("ç”Ÿæˆç‰©å“çº§è¯¦ç»†åˆ†æ...")
            stage_start = time.time()
            try:
                item_analyses = await asyncio.wait_for(
                    loop.run_in_executor(
                        _executor,
                        self.engine.analyze_all_items,
                        enriched_items,
                        bazi_info
                    ),
                    timeout=10
                )
            except asyncio.TimeoutError:
                logger.warning("ç‰©å“åˆ†æè¶…æ—¶ï¼Œä½¿ç”¨ç©ºåˆ—è¡¨")
                item_analyses = []
            
            stages_time['item_analysis'] = time.time() - stage_start
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ item_analyses ä¸ä¸º None
            if item_analyses is None:
                logger.warning("ç‰©å“åˆ†æè¿”å› Noneï¼Œä½¿ç”¨ç©ºåˆ—è¡¨")
                item_analyses = []
            
            # 4.2 ç”Ÿæˆä¸‰çº§å»ºè®®ä½“ç³»ï¼ˆå¸¦è¶…æ—¶ï¼‰
            logger.info("ç”Ÿæˆä¸‰çº§å»ºè®®ä½“ç³»...")
            stage_start = time.time()
            try:
                recommendations = await asyncio.wait_for(
                    loop.run_in_executor(
                        _executor,
                        self.engine.generate_recommendations,
                        enriched_items,
                        bazi_info
                    ),
                    timeout=10
                )
            except asyncio.TimeoutError:
                logger.warning("å»ºè®®ç”Ÿæˆè¶…æ—¶ï¼Œä½¿ç”¨ç©ºå­—å…¸")
                recommendations = {
                    'must_adjust': [],
                    'should_add': [],
                    'optional_optimize': []
                }
            
            stages_time['recommendations'] = time.time() - stage_start
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ recommendations ä¸ä¸º None
            if recommendations is None:
                logger.warning("å»ºè®®ç”Ÿæˆè¿”å› Noneï¼Œä½¿ç”¨é»˜è®¤å€¼")
                recommendations = {
                    'must_adjust': [],
                    'should_add': [],
                    'optional_optimize': []
                }
            
            # 4.3 ç”Ÿæˆæ·±åº¦å…«å­—èåˆåˆ†æ
            logger.info("ç”Ÿæˆå…«å­—æ·±åº¦èåˆåˆ†æ...")
            bazi_analysis = await asyncio.get_event_loop().run_in_executor(
                _executor,
                self.engine.generate_bazi_analysis,
                enriched_items,
                bazi_info
            )
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ bazi_analysis ä¸ä¸º None
            if bazi_analysis is None:
                logger.warning("å…«å­—åˆ†æè¿”å› Noneï¼Œä½¿ç”¨é»˜è®¤å€¼")
                bazi_analysis = {
                    'has_bazi': bool(bazi_info),
                    'message': 'å…«å­—åˆ†æå¤±è´¥' if bazi_info else 'æœªæä¾›å…«å­—ä¿¡æ¯'
                }
            
            # 5. æ„å»ºå“åº”
            # è®¡ç®—æ€»è€—æ—¶
            total_time = time.time() - total_start
            
            # è®°å½•æ€§èƒ½ä¿¡æ¯
            logger.info(f"âœ… åˆ†æå®Œæˆï¼Œæ€»è€—æ—¶: {total_time:.2f}ç§’")
            logger.info(f"   å„é˜¶æ®µè€—æ—¶: {stages_time}")
            
            # å¦‚æœæ€»è€—æ—¶è¿‡é•¿ï¼Œè®°å½•è­¦å‘Š
            if total_time > 60:
                logger.warning(f"âš ï¸ åˆ†æè€—æ—¶è¿‡é•¿: {total_time:.2f}ç§’")
            
            response = {
                'success': True,
                'items': enriched_items,
                'item_analyses': item_analyses,  # æ–°å¢ï¼šç‰©å“çº§è¯¦ç»†åˆ†æ
                'recommendations': recommendations,  # æ–°å¢ï¼šä¸‰çº§å»ºè®®ä½“ç³»
                'bazi_analysis': bazi_analysis,  # æ–°å¢ï¼šå…«å­—æ·±åº¦èåˆåˆ†æ
                'adjustments': rule_result.get('adjustments', []),
                'additions': rule_result.get('additions', []),
                'removals': rule_result.get('removals', []),
                'categorized_additions': rule_result.get('categorized_additions', {}),
                'statistics': rule_result.get('statistics', {}),
                'score': rule_result.get('score', 0),
                'summary': rule_result.get('summary', ''),
                'bazi_info': bazi_info,
                'duration_ms': int(total_time * 1000),
                'performance': {
                    'total_time': total_time,
                    'stages_time': stages_time
                },
                'using_backup': detection_result.get('using_backup', False),
                'warning': detection_result.get('warning')
            }
            
            # æ—¥å¿—å·²åœ¨ä¸Šé¢è®°å½•
            return response
            
        except Exception as e:
            total_time = time.time() - total_start
            logger.error(f"âŒ åˆ†æå¤±è´¥ï¼Œå·²è€—æ—¶: {total_time:.2f}ç§’ï¼Œé”™è¯¯: {e}", exc_info=True)
            return {
                'success': False,
                'error': str(e),
                'performance': {
                    'total_time': total_time,
                    'stages_time': stages_time
                }
            }
    
    def analyze(self, image_bytes: bytes, solar_date: Optional[str] = None,
                solar_time: Optional[str] = None, gender: Optional[str] = None,
                use_bazi: bool = True) -> Dict:
        """
        åˆ†æåŠå…¬æ¡Œé£æ°´
        
        Args:
            image_bytes: åŠå…¬æ¡Œç…§ç‰‡
            solar_date: ç”¨æˆ·å‡ºç”Ÿæ—¥æœŸï¼ˆå¯é€‰ï¼‰
            solar_time: ç”¨æˆ·å‡ºç”Ÿæ—¶é—´ï¼ˆå¯é€‰ï¼‰
            gender: æ€§åˆ«ï¼ˆå¯é€‰ï¼‰
            use_bazi: æ˜¯å¦ä½¿ç”¨å…«å­—åˆ†æ
        
        Returns:
            åˆ†æç»“æœ
        """
        start_time = time.time()
        
        try:
            # 1. æ£€æµ‹ç‰©å“
            logger.info("å¼€å§‹ç‰©å“æ£€æµ‹...")
            detection_result = self.detector.detect(image_bytes)
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ detection_result ä¸ä¸º None
            if detection_result is None:
                logger.error("ç‰©å“æ£€æµ‹è¿”å› None")
                return {
                    'success': False,
                    'error': 'ç‰©å“æ£€æµ‹æœåŠ¡è¿”å›ç©ºç»“æœï¼Œè¯·ç¨åé‡è¯•'
                }
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ detection_result æ˜¯å­—å…¸ç±»å‹
            if not isinstance(detection_result, dict):
                logger.error(f"ç‰©å“æ£€æµ‹è¿”å›äº†éå­—å…¸ç±»å‹: {type(detection_result)}")
                return {
                    'success': False,
                    'error': f'ç‰©å“æ£€æµ‹æœåŠ¡è¿”å›äº†æ— æ•ˆçš„æ•°æ®ç±»å‹: {type(detection_result).__name__}'
                }
            
            if not detection_result.get('success'):
                return {
                    'success': False,
                    'error': detection_result.get('error', 'ç‰©å“æ£€æµ‹å¤±è´¥')
                }
            
            items = detection_result.get('items', [])
            img_shape = detection_result.get('image_shape')
            
            logger.info(f"æ£€æµ‹åˆ° {len(items)} ä¸ªç‰©å“")
            
            # 2. è®¡ç®—ä½ç½®
            logger.info("è®¡ç®—ç‰©å“ä½ç½®...")
            enriched_items = PositionCalculator.calculate_all_positions(items, img_shape)
            
            # 3. è·å–å…«å­—ä¿¡æ¯ï¼ˆå¦‚æœéœ€è¦ï¼‰
            bazi_info = None
            if use_bazi and solar_date and solar_time and gender:
                logger.info("è·å–å…«å­—ä¿¡æ¯...")
                bazi_result = self.bazi_client.get_xishen_jishen(solar_date, solar_time, gender)
                
                # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ bazi_result ä¸ä¸º None
                if bazi_result is not None and isinstance(bazi_result, dict):
                    if bazi_result.get('success'):
                        bazi_info = bazi_result
                    else:
                        error_msg = bazi_result.get('error', 'æœªçŸ¥é”™è¯¯')
                        logger.warning(f"è·å–å…«å­—ä¿¡æ¯å¤±è´¥: {error_msg}")
                else:
                    logger.warning(f"è·å–å…«å­—ä¿¡æ¯è¿”å›æ— æ•ˆç»“æœ: {type(bazi_result)}")
            
            # 4. åŒ¹é…è§„åˆ™
            logger.info("åŒ¹é…é£æ°´è§„åˆ™...")
            rule_result = self.engine.match_rules(enriched_items, bazi_info)
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ rule_result ä¸ä¸º None
            if rule_result is None:
                logger.error("è§„åˆ™åŒ¹é…è¿”å› None")
                return {
                    'success': False,
                    'error': 'è§„åˆ™åŒ¹é…æœåŠ¡è¿”å›ç©ºç»“æœï¼Œè¯·ç¨åé‡è¯•'
                }
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ rule_result æ˜¯å­—å…¸ç±»å‹
            if not isinstance(rule_result, dict):
                logger.error(f"è§„åˆ™åŒ¹é…è¿”å›äº†éå­—å…¸ç±»å‹: {type(rule_result)}")
                return {
                    'success': False,
                    'error': f'è§„åˆ™åŒ¹é…æœåŠ¡è¿”å›äº†æ— æ•ˆçš„æ•°æ®ç±»å‹: {type(rule_result).__name__}'
                }
            
            if not rule_result.get('success'):
                return {
                    'success': False,
                    'error': rule_result.get('error', 'è§„åˆ™åŒ¹é…å¤±è´¥')
                }
            
            # 4.1 ä¸ºæ¯ä¸ªç‰©å“ç”Ÿæˆè¯¦ç»†åˆ†æ
            logger.info("ç”Ÿæˆç‰©å“çº§è¯¦ç»†åˆ†æ...")
            item_analyses = self.engine.analyze_all_items(enriched_items, bazi_info)
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ item_analyses ä¸ä¸º None
            if item_analyses is None:
                logger.warning("ç‰©å“åˆ†æè¿”å› Noneï¼Œä½¿ç”¨ç©ºåˆ—è¡¨")
                item_analyses = []
            
            # 4.2 ç”Ÿæˆä¸‰çº§å»ºè®®ä½“ç³»
            logger.info("ç”Ÿæˆä¸‰çº§å»ºè®®ä½“ç³»...")
            recommendations = self.engine.generate_recommendations(enriched_items, bazi_info)
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ recommendations ä¸ä¸º None
            if recommendations is None:
                logger.warning("å»ºè®®ç”Ÿæˆè¿”å› Noneï¼Œä½¿ç”¨é»˜è®¤å€¼")
                recommendations = {
                    'must_adjust': [],
                    'should_add': [],
                    'optional_optimize': []
                }
            
            # 4.3 ç”Ÿæˆæ·±åº¦å…«å­—èåˆåˆ†æ
            logger.info("ç”Ÿæˆå…«å­—æ·±åº¦èåˆåˆ†æ...")
            bazi_analysis = self.engine.generate_bazi_analysis(enriched_items, bazi_info)
            
            # ğŸ”´ é˜²å¾¡æ€§æ£€æŸ¥ï¼šç¡®ä¿ bazi_analysis ä¸ä¸º None
            if bazi_analysis is None:
                logger.warning("å…«å­—åˆ†æè¿”å› Noneï¼Œä½¿ç”¨é»˜è®¤å€¼")
                bazi_analysis = {
                    'has_bazi': bool(bazi_info),
                    'message': 'å…«å­—åˆ†æå¤±è´¥' if bazi_info else 'æœªæä¾›å…«å­—ä¿¡æ¯'
                }
            
            # 5. æ„å»ºå“åº”
            duration = int((time.time() - start_time) * 1000)
            
            response = {
                'success': True,
                'items': enriched_items,
                'item_analyses': item_analyses,  # æ–°å¢ï¼šç‰©å“çº§è¯¦ç»†åˆ†æ
                'recommendations': recommendations,  # æ–°å¢ï¼šä¸‰çº§å»ºè®®ä½“ç³»
                'bazi_analysis': bazi_analysis,  # æ–°å¢ï¼šå…«å­—æ·±åº¦èåˆåˆ†æ
                'adjustments': rule_result.get('adjustments', []),
                'additions': rule_result.get('additions', []),
                'removals': rule_result.get('removals', []),
                'categorized_additions': rule_result.get('categorized_additions', {}),
                'statistics': rule_result.get('statistics', {}),
                'score': rule_result.get('score', 0),
                'summary': rule_result.get('summary', ''),
                'duration': duration
            }
            
            # æ·»åŠ å…«å­—ä¿¡æ¯ï¼ˆå¦‚æœæœ‰ï¼‰
            if bazi_info:
                response['xishen'] = bazi_info.get('xishen', '')
                response['jishen'] = bazi_info.get('jishen', '')
                response['bazi_info'] = bazi_info
            
            # æ·»åŠ æ£€æµ‹è­¦å‘Šï¼ˆå¦‚æœæœ‰ï¼‰
            if detection_result.get('warning'):
                response['warning'] = detection_result['warning']
                logger.warning(f"âš ï¸ æ£€æµ‹è­¦å‘Š: {response['warning']}")
            
            logger.info(f"åˆ†æå®Œæˆï¼Œè€—æ—¶ {duration}msï¼Œè¯„åˆ† {response['score']}åˆ†")
            
            return response
            
        except Exception as e:
            total_time = time.time() - total_start if 'total_start' in locals() else 0
            logger.error(f"âŒ åˆ†æå¤±è´¥ï¼Œå·²è€—æ—¶: {total_time:.2f}ç§’ï¼Œé”™è¯¯: {e}", exc_info=True)
            return {
                'success': False,
                'error': str(e),
                'performance': {
                    'total_time': total_time,
                    'stages_time': stages_time if 'stages_time' in locals() else {}
                }
            }


if __name__ == "__main__":
    # æµ‹è¯•ä»£ç 
    logging.basicConfig(level=logging.INFO)
    
    analyzer = DeskFengshuiAnalyzer()
    
    # åŠ è½½æµ‹è¯•å›¾åƒ
    with open("test_desk.jpg", "rb") as f:
        image_bytes = f.read()
    
    result = analyzer.analyze(
        image_bytes=image_bytes,
        solar_date="1990-01-01",
        solar_time="12:00",
        gender="male",
        use_bazi=True
    )
    
    print(f"åˆ†æç»“æœ: {result}")

